--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Eat-Da-Burger</title>
+    <title>Burger Sequelized!</title>
     <link href="https://fonts.googleapis.com/css?family=Cinzel|Righteous" rel="stylesheet">
     <link rel="stylesheet" href="/public/assets/css/burger_style.css">
     <script src="/public/assets/js/burgers.js"></script>
@@ -13,8 +13,8 @@
     <section id="modal-container" class="modal-container-class">
         <section id="modal-box">
             <span id='close-button'>&times;</span>
-            <h1>Nobody Likes an Empty Burger</h1>
-            <p>Please enter a burger name in the form.</p>
+            <h1 id="modal-head"></h1>
+            <p id="modal-body"></p>
         </section>
     </section>
     <section id='content-container' class="fade-in">
