--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -19,6 +19,11 @@ body {
     background-size: cover;
 }
 
+option, select {
+    background-color: darkblue;
+    border-radius: .5rem;
+}
+
 /* Button reset */
 button {
     padding: 0%;
@@ -36,7 +41,7 @@ h2 {
 }
 
 /* Developer-named values */
-#add-a-burg {
+#add-a-burg, #add-a-cust {
     display: flex;
     flex-wrap: column;
     justify-content: center;
@@ -74,14 +79,14 @@ h2 {
     grid-template-columns: repeat(3, 1fr);
 }
 
-#burg-name {
+#burg-name, #cust-name {
     height: 50px;
     width: 450px;
     font-size: 2rem;
     font-family: var(--header-fonts);
 }
 
-#burg-legend {
+#burg-legend, #cust-legend {
     color: white;
     -webkit-text-stroke: 1px black;
     font-size: 3rem;
@@ -111,6 +116,22 @@ h2 {
     grid-template-rows: 1fr, 2fr;
     background-color: rgba(110, 104, 104, .8);
     height: 100%;
+}
+
+.customer-descriptors {
+    -webkit-text-stroke: 2px black;
+    font-size: 2.25rem;
+    margin: 0%;
+    padding: 0%;
+}
+
+#cust-house {
+    height: 300px;
+    color: white;
+}
+
+#cust-name {
+    -webkit-text-stroke: 0px;
 }
 
 .devour-burg {
@@ -150,6 +171,13 @@ h2 {
     margin: 5px 0px;
 }
 
+#existing-cust {
+    font-size: 2rem;
+    text-align: center;
+    font-family: var(--body-fonts);
+    color: white;
+}
+
 .fade-in {
     animation: fadein 5s;
 }
@@ -158,18 +186,22 @@ h2 {
     animation: fadeinout 5s;
 }
 
-#form-house {
+#form-house, #cust-house {
     text-align: center;
+   
     width: 500px;
-    height: 240px;
     box-shadow: 5px 5px 5px black;
     font-family: var(--header-fonts);
     background-image: url('../img/table_cloth.jpg');
     margin-top: 20px;
 }
 
+#form-house {
+    height: 240px;
+}
+
 #main-content {
-    margin-top: 5%;
+    margin-top: 1%;
 }
 
 #modal-box {
@@ -203,6 +235,26 @@ h2 {
     visibility: visible;
 }
 
+#new-customer {
+    background-color: var(--burger-bun);
+    border-radius: .5rem;
+    padding: .5rem;
+    margin-top: 5px;
+    box-shadow: 5px 5px 5px black;
+    color: white;
+    -webkit-text-stroke: .1rem black;
+    transition: background-color 1s ease;
+}
+
+#new-customer:hover {
+    background-color: darkblue;
+}
+
+#return-area {
+    display: flex;
+    flex-flow: column;
+}
+
 #title {
     color: red;
     text-shadow: 7px 7px 4px rgba(0, 0, 0, 1);
@@ -211,6 +263,11 @@ h2 {
     font-size: 100px;
     position: absolute;
     left: 20%;
+}
+
+#user-choices {
+    display: flex;
+    justify-content: space-evenly
 }
 
 /* Keyframes */
